--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <img src="assets/img/mej.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>WEB/GAME &amp; Developer</h3>
+          <h3>IT Support & WEB/GAME Developer</h3>
           <p class="fst-italic">
 
             let me introduce myself, I am Jaenal Aripin, this is a little about me :
