--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://x.com/JaenalArp" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/jhenal.a" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://id.linkedin.com/in/jaenal-aripin-1a9795191" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
