--- a/index.html
+++ b/index.html
@@ -428,10 +428,7 @@
 -->
   </section>
 
-
-
-  <!-- ======= Resume Section ======= -->
-  <section id="resume" class="resume">
+<section id="resume" class="resume">
     <div class="container">
 
       <div class="section-title">
@@ -441,57 +438,111 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Work Experience & Education</h3>
 
-
-          <div class="resume-item">          
-            <h4>PT. Nobi Putra Angkasa</h4>
+          <div class="resume-item">
+            <h4>PT. Pecca Gemilang Indoensia</h4>
+            <h5>IT Staff</h5>
             <p><em>managing IT equipment such as computers, build web-based programs</em></p>
             <p>
             <ul>
-              <li>Karawang, Jawabarat</li>
+              <li>Cikarang, Kab.Bekasi, Jawa Barat</li>
             </ul>
             </p>
 
-          <div class="resume-item">          
-            <h4>PT. Federal Izumi Manufacturing</h4>
-            <p><em>managing IT equipment such as computers, build web-based programs</em></p>
-            <p>
-            <ul>
-              <li>Cileungsi, Bogor</li>
-            </ul>
-            </p>
+            <hr>
 
-          <div class="resume-item">
-            <h4>CV. INDOFESYEN</h4>
-            <p><em>Manage databases and online stores in 2 year</em></p>
-            <p>
-            <ul>
-              <li>Perum Citra Indah City, Bogor</li>
-            </ul>
-            </p>
+            <div class="resume-item">
+              <h4>PT. IEG Oilfield Indonesia</h4>
+              <h5>IT Staff</h5>
+              <p><em>managing IT equipment such as computers, build web-based programs</em></p>
+              <p>
+              <ul>
+                <li>Batam, Kepulauan Riau</li>
+              </ul>
+              </p>
+
+              <hr>
+
+              <div class="resume-item">
+                <h4>PT. Nobi Putra Angkasa</h4>
+                <h5>IT Staff</h5>
+                <p><em>managing IT equipment such as computers, build web-based programs</em></p>
+                <p>
+                <ul>
+                  <li>Karawang, Jawabarat</li>
+                </ul>
+                </p>
+                <hr>
+
+                <div class="resume-item">
+                  <h4>PT. Sunindo Adipersada.Tbk</h4>
+                  <h5>IT Staff</h5>
+                  <p><em>managing IT equipment such as computers, build web-based programs</em></p>
+                  <p>
+                  <ul>
+                    <li>Cileungsi, Bogor, Jawabarat</li>
+                  </ul>
+                  </p>
+                  <hr>
 
 
+                  <div class="resume-item">
+                    <h4>PT. Nobi Putra Angkasa</h4>
+                    <h5>IT Staff</h5>
+                    <p><em>managing IT equipment such as computers, build web-based programs</em></p>
+                    <p>
+                    <ul>
+                      <li>Karawang, Jawabarat</li>
+                    </ul>
+                    </p>
+                    <hr>
 
-          </div>
+                    <div class="resume-item">
+                      <h4>PT. Federal Izumi Manufacturing</h4>
+                      <h5>IT Intern</h5>
+                      <p><em>managing IT equipment such as computers, build web-based programs</em></p>
+                      <p>
+                      <ul>
+                        <li>Cileungsi Bogor, Bogor</li>
+                      </ul>
+                      </p>
+                      <hr>
 
-          <h3 class="resume-title">Education</h3>
-          <div class="resume-item">
-            <h4>Informatics Management (Computer Informatics)</h4>
-            <h5>2015 - 2018</h5>
-            <p><em>Politeknik LP3I Jakarta</em></p>
-            <p>web programming learning</p>
-          </div>
-          
-        <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
-          <div class="resume-item">
-            <h4>Create an online store website</h4>
-            <h5>2019</h5>
-          </div>
-      </div>
+                      <div class="resume-item">
+                        <h4>CV. INDOFESYEN</h4>
+                        <h5>IT Staff</h5>
+                        <p><em>Manage databases and online stores in 2 year</em></p>
+                        <p>
+                        <ul>
+                          <li>Jonggol, Bogor, JB</li>
+                        </ul>
+                        </p>
 
-    </div>
+
+                        <hr>
+                        <hr>
+                      </div>
+
+                      <h3 class="resume-title">Education</h3>
+                      <div class="resume-item">
+                        <h4>Informatics Management (Computer Informatics)</h4>
+                        <h5>2015 - 2018</h5>
+                        <p><em>Politeknik LP3I Jakarta</em></p>
+                        <p>web programming learning</p>
+                      </div>
+
+                      <div class="col-lg-6">
+                        <h3 class="resume-title">Professional Experience</h3>
+                        <div class="resume-item">
+                          <h4>Create an online store website</h4>
+                          <h5>2019</h5>
+                        </div>
+                      </div>
+
+                    </div>
+
+ 
   </section><!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
